# fastapitest

./: main.py  pyproject.toml
fastapitest/: __init__.py
