[tool.poetry]
name = "fastapitest"
version = "0.1.0"
description = ""
authors = ["ralf-t <tabo.ralfmartin@ue.edu.ph>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.4"}
fastapi-jwt-auth = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
